# dynamic-account-demo

./: README.md  architecture.md
.github/workflows/: docker-release.yml
contracts/isafe/: .gitignore  Move.toml
contracts/isafe/sources/: account.move  dynamic_auth.move  members.move  transactions.move
contracts/isafe/tests/: isafe_tests.move
dapp/: README.md  package-lock.json  package.json  pnpm-lock.yaml
dapp/app/: globals.css  layout.tsx  page.tsx
dapp/app/[account]/: not-found.tsx  page.tsx
dapp/app/[account]/settings/: page.tsx
dapp/app/[account]/transactions/: page.tsx
dapp/app/create/: page.tsx
dapp/components/: AccountActivity.tsx  AccountBalance.tsx  AccountHistory.tsx  AccountOverView.tsx  AccountSelector.tsx  AllowedAuthenticators.tsx  ApprovalProgressBar.tsx  ApprovedTransactions.tsx  ConnectionGuard.tsx  EventItem.tsx  ExecutedTransactions.tsx  Members.tsx  ProposedTransactions.tsx  Threshold.tsx  Toaster.tsx  Transactions.tsx  WalletInfo.tsx
dapp/components/dialogs/: ApproveTransactionDialog.tsx  ExecuteSettingChangesDialog.tsx  ExecuteTransactionDialog.tsx  ProposeTransactionDialog.tsx  SendIotaDialog.tsx
dapp/components/layout/: Navbar.tsx
dapp/config/: config.schema.ts  config.ts  index.ts
dapp/contexts/: IsafeIndexerClientContext.tsx  ThemeContext.tsx  TxServiceClientContext.tsx  index.ts
dapp/hooks/: index.ts  queryKey.ts  useGetAccountBalance.ts  useGetAccountEvents.ts  useGetAccountObject.ts  useGetAccountTransactions.ts  useGetAccountsForAddress.ts  useGetAllowedAuthenticators.ts  useGetMembers.ts  useGetThreshold.ts  useGetTransactionDetails.ts
dapp/lib/bcs/: events.ts
dapp/lib/clients/: IsafeIndexerClient.ts  TxServiceClient.ts
dapp/lib/constants/: theme.constants.ts
dapp/lib/enums/: index.ts  theme.enums.ts
dapp/lib/utils/: defaultRpcClient.ts  errorResolution.ts  findThresholdCombinations.ts  formatIotaBalance.ts  formatTimestamp.ts  generateAvatar.ts  parseAppKey.ts  shortenAddress.ts  uploadTx.ts
dapp/providers/: AppProviders.tsx  ISafeAccountProvider.tsx  ThemeProvider.tsx  index.ts
docker/: docker-compose.yml
indexer/: .env.example  .gitignore  Cargo.toml  README.md
indexer/docker/: Dockerfile
indexer/migrations/2025-12-03-130108-0000_accounts/: down.sql  up.sql
indexer/migrations/2025-12-03-130108-0000_members/: down.sql  up.sql
indexer/migrations/2025-12-08-131557-0000_transactions/: down.sql  up.sql
indexer/migrations/2025-12-12-152904-0000_events/: up.sql
indexer/src/: config.rs  events.rs  main.rs  metrics.rs  worker.rs
indexer/src/api/: error.rs  mod.rs  responses.rs  routes.rs
indexer/src/db/: mod.rs  models.rs  pool.rs  queries.rs  schema.rs
scripts/: .gitignore  Cargo.toml
scripts/src/: main.rs
tx-service/: Cargo.toml
tx-service/docker/: Dockerfile
tx-service/migrations/2025-12-05-202520-0000_tx/: down.sql  up.sql
tx-service/src/: main.rs
tx-service/src/api/: mod.rs  responses.rs  routes.rs
tx-service/src/db/: mod.rs  pool.rs  queries.rs  schema.rs
